syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Grpc.BookingService";

service GrpcBookingService {
  rpc BookParkingSlot (BookingRequest) returns (BookingReply);
  rpc CancelBooking(CancelBookingRequest) returns (CancelBookingReply);
  rpc GetActiveBookingsByUser(BookingsByUserRequest) returns (BookingsByUserReply);
}

message BookingRequest {
  int32 userId = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
}

message BookingReply {
  int32 bookingId = 1;
  string parkingSlotName = 2;
}

message CancelBookingRequest {
  int32 bookingId = 1;
}

message CancelBookingReply {
  bool success = 1;
}

message BookingsByUserRequest{
  int32 userId = 1;
}

message BookingsByUserReply{
  message BookingByUser{
    string parkingSlotName = 1;
    google.protobuf.Timestamp startDate = 2;
    google.protobuf.Timestamp endDate = 3;
  }

  repeated BookingByUser bookingsByUser = 1;
}
